

set(zhaoshang_test_1-SRCS zhaoshang_1.cpp)
add_executable(zhaoshang_test_1 ${zhaoshang_test_1-SRCS})


set(zhaoshang_test_2-SRCS zhaoshang_2.cpp)
add_executable(zhaoshang_test_2 ${zhaoshang_test_2-SRCS})


set(zhaoshang_test_3-SRCS zhaoshang_3.cpp)
add_executable(zhaoshang_test_3 ${zhaoshang_test_3-SRCS})

set(zhaoshang_test_4-SRCS zhaoshang_4.cpp)
add_executable(zhaoshang_test_4 ${zhaoshang_test_4-SRCS})